# MathCAT

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  test_results.txt  test_results2.txt  test_results3.txt  test_results4.txt  test_results5.txt
.cargo/: config.toml
.github/workflows/: rust.yml
Python/: test.py
PythonScripts/: AEEChars.py  BrailleMathCodes Repository.csv  BrailleMathCodes Repository.xlsx  List of mathematical symbols by subject.htm  README.md  aee_compare.py  alphanumerics.py  ascii-math-symbols.js  ascii_braille.py  audit-translations.py  braille-convert.py  braille.csv  chem_formula_from_wikipedia.py  cptob.xml  create-braille-tests.py  dbt-mathtype-results.py  dbt-results.py  euro-braille-dict.txt  euro-braille-short.csv  euro-braille.py  latex-symbols.htm  liblouis-generate-tests.py  liblouis-tester.py  nemeth-convert.py  opdict-convert.py  pyproject.toml  range.py  read-braillecodes.py  replace_tabs_with_spaces_in_yaml_files.py  rust-test-to-html.py  translate-rules.py  translate-unicode.py  ueb-convert.py  ueb-from-csv.yaml  ueb.csv  wikipedia-chemical_formulae.html  wikipedia-ions.html
PythonScripts/audit_translations/: README.md  __init__.py  __main__.py  auditor.py  cli.py  dataclasses.py  parsers.py  ui.py
PythonScripts/audit_translations/tests/: __init__.py  test_auditor.py  test_cli_end_to_end.py  test_output_jsonl.py  test_parsers.py
PythonScripts/audit_translations/tests/fixtures/Rules/Languages/en/: overview.yaml
PythonScripts/audit_translations/tests/fixtures/Rules/Languages/en/SharedRules/: calculus.yaml
PythonScripts/audit_translations/tests/fixtures/Rules/Languages/es/: overview.yaml
PythonScripts/audit_translations/tests/fixtures/Rules/Languages/es/SharedRules/: calculus.yaml
PythonScripts/audit_translations/tests/fixtures/de/: basic.yaml  condition_none.yaml  match.yaml  structure.yaml  structure_diff.yaml  structure_empty.yaml  structure_misaligned.yaml  structure_missing_else.yaml  unicode.yaml  variables.yaml  variables_none.yaml  whitespace.yaml
PythonScripts/audit_translations/tests/fixtures/en/: basic.yaml  condition_none.yaml  match.yaml  structure.yaml  structure_diff.yaml  structure_empty.yaml  structure_misaligned.yaml  structure_missing_else.yaml  unicode.yaml  variables.yaml  variables_none.yaml  whitespace.yaml
PythonScripts/audit_translations/tests/golden/jsonl/: de.json  de.jsonl
PythonScripts/audit_translations/tests/golden/rich/: structure_diff_nonverbose.golden  structure_diff_verbose.golden
Rules/: cleanup.yaml  definitions.yaml  infer.yaml  intent.yaml  prefs.yaml
Rules/Braille/: definitions.yaml
Rules/Braille/ASCIIMath/: ASCIIMath_Rules.yaml  definitions.yaml  unicode-full.yaml  unicode.yaml
Rules/Braille/ASCIIMath-fi/: ASCIIMath_Rules.yaml  definitions.yaml  unicode-full.yaml  unicode.yaml
Rules/Braille/CMU/: CMU_Rules.yaml  definitions.yaml  unicode-full.yaml  unicode.yaml
Rules/Braille/EuroBraille/: EuroBraille_Rules.yaml  definitions.yaml  unicode.yaml
Rules/Braille/Finnish/: dummy_file_for_braille.txt  suomi_Rules.yaml  unicode-full.yaml  unicode.yaml
Rules/Braille/French/: French_Rules.yaml  unicode-full.yaml  unicode.yaml
Rules/Braille/LaTeX/: LaTeX_Rules.yaml  definitions.yaml  unicode-full.yaml  unicode.yaml
Rules/Braille/Nemeth/: Nemeth_Rules.yaml  definitions.yaml  unicode-full.yaml  unicode.yaml  unicode.yaml-with-all
Rules/Braille/Polish/: Polish_Rules.yaml  definitions.yaml  unicode-full.yaml  unicode.yaml
Rules/Braille/Swedish/: Swedish_Rules.yaml  Sweedish_Rules.yaml  definitions.yaml  unicode-full.yaml  unicode.yaml
Rules/Braille/UEB/: UEB_Rules.yaml  unicode-full.yaml  unicode.yaml
Rules/Braille/Vietnam/: Vietnam_Rules.yaml  definitions.yaml  unicode-full.yaml  unicode.yaml
Rules/Intent/: calculus.yaml  general.yaml  general.yaml-anylabelpos  geometry.yaml  linear-algebra.yaml  probability.yaml
Rules/Languages/de/: ClearSpeak_Rules-OFF.yaml  ClearSpeak_Rules.yaml  SimpleSpeak_Rules.yaml  definitions.yaml  navigate.yaml  overview.yaml  unicode-full.yaml  unicode.yaml
Rules/Languages/el/: ClearSpeak_Rules.yaml  SimpleSpeak_Rules.yaml  definitions.yaml  navigate.yaml  overview.yaml  unicode-full.yaml  unicode.yaml
Rules/Languages/en/: ClearSpeak_Rules.yaml  MathSpeak_Rules.yaml  SimpleSpeak_Rules.yaml  navigate.yaml  (+4 more)
Rules/Nemeth/: Nemeth_Rules.yaml  unicode-full.yaml  unicode.yaml
Rules/UEB/: UEB_Rules.yaml  unicode.yaml
Rules/en/: ClearSpeak_Rules.yaml  SimpleSpeak_Rules.yaml  common-rules.yaml  default-rules.yaml  menclose.yaml  navigate.yaml  overview.yaml  unicode-full.yaml  unicode.yaml
Rules/zz/: .ClearSpeak_Rules.yaml.swp  ClearSpeak_Rules.yaml  definitions.yaml
docs/: ClearSpeakRulesAndPreferences.docx  MathCAT Future Plans.docx  SpanishBraille.html  braille-back-translation-proposal.md  callers.md  developers.md  helpers.md  index.md  nav-commands.md  users.md  users.tex.md
docs/CMU/: Codigo matematico unificado para Iberoamerica.html  Codigo.outline  main.css
docs/_layouts/: default.html
examples/: stateless-example.rs
src/: .read_speech_rules.rs.bak.swp  Preview attachment main.rs [Text] 3 KB.URL  braille.rs  canonicalize.rs  canonicalize.rs.bak  canonicalize.rs.op-versions-ref  canonicalize.rs.with-unsafe  canonicalize.rs.withentry  canonicalize.rs.withlife-time  chemistry.rs  definitions.rs  element_util.rs  entities.in  infer_intent.rs  interface.rs  interface.rs.com  lib.rs  logs.rs  main.rs  navigate.rs  operator-info.in  prefs.rs  pretty_print.rs  rule_coverage.rs  rustfmt.toml  shim_filesystem.rs  speech.rs  stateless_interface.rs  test.rs  tts.rs  xpath_functions.rs
src/back_translate/: cmu.pest  cmu.rs  code_switch.rs  errors.rs  mathml_gen.rs  mod.rs  nemeth.pest  nemeth.rs  semantic.rs  spatial.rs  ueb.pest  ueb.rs
tests/: braille.rs  en.rs  functions.rs  languages.rs  large_ops.rs  menclose.rs  mfrac.rs  mroot.rs  msup.rs  mtable.rs  number_sets.rs  sets.rs
tests/Languages/: de.rs  en.rs  es.rs  fi.rs  intent.rs  nb.rs  zh.rs
tests/common/: mod.rs
tests/en/: chemistry.rs  shared.rs
(+418 files in other folders)
