[package]
name = "mathcat"
version = "0.6.8-rc.8"
authors = ["Neil Soiffer <soiffer@alum.mit.edu>"]
license = "MIT"
description = "MathCAT: Math Capable Assistive Technology ('Speech and braille from MathML')"
repository = "https://github.com/NSoiffer/MathCAT"
homepage = "https://nsoiffer.github.io/MathCAT/"
documentation = "https://nsoiffer.github.io/MathCAT/"
edition = "2018"
exclude = ["src/main.rs"]    # should have "Rules/", but then one can't run build.rs to build the zip file


[features]
"include-zip" = []
"enable-logs" = ["android_logger"]

# FIX: temporary -- need to replace error-chain package which has been deprecated
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(has_error_description_deprecated)'] }

[dependencies]
sxd-document = "0.3"
sxd-xpath = "0.4"
yaml-rust = "0.4"
lazy_static = "1.4"
strum = "0.26"
strum_macros = "0.26"
error-chain = "0.12.4"
regex = "1.10"
dirs = "6.0"
bitflags = "2.5"
phf = { version = "0.11", features = ["macros"] }
rand = "0.8"
roman = "0.1"
radix_fmt = "1.0"
unicode-script = "0.5"
log = "0.4"
env_logger = "0.11"
cfg-if = "1.0"
# [target.'cfg(target_family = "wasm")'.dependencies]
zip = { version = "2.1", default-features = false, features = ["deflate"] }
# [target.'cfg(not(target_family = "wasm"))'.dependencies]
# zip = { version = "2.1", default-features = false, features = ["bzip2"] }

[dependencies.getrandom]
version = "0.2"
features = ["js"]

[target.'cfg(target_os = "android")'.dependencies]
android_logger = {version = "0.14.1", optional = true}

# # dependencies because of need to build wasm version for file i/o
# yew = "0.18.0"
# wasm-bindgen = "0.2.78"
# wasm-bindgen-futures = "0.4.28"
# js-sys = "0.3.35"
# futures = "0.3.15"

# [dependencies.web-sys]
# version = "0.3.35"
# features = [
#     "HtmlInputElement",
#     # probably not all of these are needed -- copied from an example
#     "Headers",
#     "Request",
#     "RequestInit",
#     "RequestMode",
#     "Response",
#     "Window",
# ]



[build-dependencies]
bitflags = "2.5"
error-chain = "0.12.4"
[target.'cfg(target_family = "wasm")'.build-dependencies]
zip = { version = "2.1", default-features = false, features = ["deflate"] }
[target.'cfg(not(target_family = "wasm"))'.build-dependencies]
zip = { version = "2.1", default-features = false, features = ["bzip2"] }

[lib]
name = "libmathcat"
crate-type = ["rlib", "cdylib"]

[profile.test]
debug = true
opt-level = 1    # adds a few seconds to the compile, but cuts testing time by ~75% (~90 secs on 5/24)

[profile.release]
debug = false
lto = true
# opt-level = "z"  # Optimize for size.
